--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
       name="keywords"
       content="phishing url,phishing,cyber security,machine learning,classifier,python"
     />
-    <meta name="author" content="VAIBHAV BICHAVE" />
+    <meta name="author" content="NARAYAN SONI" />
 
     <!-- BootStrap -->
     <link
@@ -50,9 +50,8 @@
         <div class="col-md" id="form2">
           <br />
           <h6 class="right">
-            <a href="{{" url }} target="_blank">{{ url }}</a>
+            <a href="{{ url }}" target="_blank">{{ url }}</a>
           </h6>
-
           <br />
           <h3 id="prediction"></h3>
           <button
