--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="This website is develop for identify the safety of url."
+      content="This website was developed to identify the safety of an url."
     />
     <meta
       name="keywords"
